bk_ida/gobmkida/c0/atari_atari_find_attack_moves
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/atari_atari_find_attack_moves/src/engine/combination.c:1329:15: error: use of undeclared identifier 'off_58C786'
v4 = ( char *)off_58C786; 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/atari_atari_find_attack_moves/src/obj/1/combination.o] Error 1
